# dataset-chef

./: .commit_log.txt  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  dataset_push.sh  pyproject.toml
.github/workflows/: ci.yml
dataset_chef/: __init__.py  cli.py  dataset_push.sh:Zone.Identifier  dedup.py  io_utils.py  stats.py  tokenizer.py
tests/: conftest.py  test_cli.py  test_dedup.py  test_tokenizer.py
